<resources>
    <string name="app_name">JetDevs_Practical</string>
    <string name="desc_splash_image">Splash Image</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="error_user_name">Please enter username</string>
    <string name="error_password">Please enter password</string>
    <string name="home">Home</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="userid">UserId:</string>
    <string name="x_acc">X-Acc</string>
</resources>